Updated maps to include time periods in the battle cards and link to the GitHub repo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="col-5 col-sm-6">
                     <!--  Top Social bar start -->
                     <div class="top_social_bar">
-                        <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://github.com/martinj96/Ada2017/tree/master/project"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                         <!-- Single Post Share Info -->
                         <div class="col-2 col-sm-1">
                             <div class="single-post-share-info mt-100">
-                                <a href="#" class="github"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                <a href="https://github.com/martinj96/Ada2017/tree/master/project" class="github"><i class="fa fa-github" aria-hidden="true"></i></a>
                             </div>
                         </div>
 
@@ -844,7 +844,7 @@
                 <div class="col-12">
                     <div class="footer-social-area d-flex">
                         <div class="single-icon">
-                            <a href="#"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            <a href="https://github.com/martinj96/Ada2017/tree/master/project"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
                         </div>
                     </div>
                 </div>
